--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,15 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  
 
   <body>
+  
+  <% flash.keys.each do |type| %>
+    <strong><%= flash[type] %></strong>
+    <br /><br />
+  <% end %>
+
     <%= yield %>
   </body>
 </html>
