--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
     <br /><br />
   <% end %>
 
-  <%= link_to 'Log Out', logout_path, method: :delete %>
+  <%= button_to 'Home', films_path, method: :get %>
+
+  <%= button_to 'Log Out', logout_path, method: :delete %>
 
     <%= yield %>
   </body>
